objects/HVCPUserLog__c.object
<CustomObject>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>contact Id</description>
        <label>ContactId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Siebel_Contact_Id__c</fullName>
        <label>Siebel_Contact_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mathworks_accountId__c</fullName>
        <label>mathworks_accountId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>HVCPUserLog</label>
    <nameField>
        <label>HVCPUserLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HVCPUserLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>